Fix reply button spacing

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -121,6 +121,9 @@ textarea
   blockquote
     margin: 1rem 0
 
+  .byline, blockquote + button
+    margin-top: 0
+
 .note blockquote *
   max-width: 50%
   max-height: 10%
